...
            tabBarIcon: ({ focused }) => <FancyTabIcon name="person" focused={focused} />,
          }}
        />
      <Tabs.Screen
          name="today"
          options={{
            title: 'Today',
            tabBarIcon: ({ focused }) => <FancyTabIcon name="home" focused={focused} />,
          }}
        />
      <Tabs.Screen
          name="history"
          options={{
...
